--- a/Main.html
+++ b/Main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="stylesheet" href="main.css" />
     <!--  FONTS -->
 
     <!-- CSS -->
@@ -13,7 +13,28 @@
   </head>
   <body>
     <nav>
-      <!-- Navbar -->
+      <div class="navbar">
+        <div class="logo">
+          <a href="">
+            <img src="/img/logo.png" width="50px" />
+          </a>
+        </div>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <div class="dropdown">
+          <button class="dropbtn">
+            Resources
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="#">Message to Parents</a>
+            <a href="#">Areas we serve</a>
+            <a href="#">Procedures</a>
+          </div>
+        </div>
+        <a href="Register"> Register</a>
+        <a href="Login"> Log In</a>
+      </div>
     </nav>
     <header>
       <!-- Header -->
@@ -23,8 +44,6 @@
 
       <section>
         <!-- About -->
-        
-        
       </section>
       <section>
         <!-- Services -->
@@ -45,8 +64,22 @@
       <!-- Main  -->
     </main>
 
-    <footer>
-      <!-- Footer -->
+    <footer class="footer">
+      <a href="https://www.facebook.com/MadAreaDrivingSchool">
+        <img
+          src="/img/facebook-logo-icon-facebook-icon-png-images-icons-and-png-backgrounds-1.png"
+          width="50px"
+        />
+      </a>
+
+      <a href="mailto:jkapinus@madareadriving.com">
+        <img
+          src="/img/email-logo-communications-brands-and-logotypes-gmail-14.png"
+          width="50px"
+        />
+      </a>
+
+      <a href="tel:+(608) 345-9598"> (608) 345-9598 </a>
     </footer>
 
     <!-- Javascript -->
