--- a/parent.html
+++ b/parent.html
@@ -99,22 +99,15 @@
         <div class="row">
           <div class="col-12">
             <div class="intro service">
-              <h1 class="glow">Letter to the Parents</h1>
+              <h6>Message to Parents</h6>
+              <h1>Memo</h1>
               <p class="mx-auto">
-                On behalf of the staff at Mad Area Driving School, I am happy to welcome you to the 2022-23 school
-                year! We are looking forward to a productive partnership with you to ensure our children can
-                achieve their highest potential. We recognize that in order to be successful in school, our
-                children need support from both the home and school. We know a strong partnership with you
-                will make a great difference in your childs education. As partners, we share the responsibility
-                for our childrens success and want you to know that we will do our very best to carry out our
-                responsibilities. We ask that you guide and support your childs learning by ensuring that
-                he/she:
+                Your teen will have six two-hour sessions of behind the wheel
+                with the instructor. The pick-up locations for the in-car
+                sessions will depend on the day the session is scheduled. If
+                school is in session (a scheduled school day), we will pick your
+                teen up at the designated location noted below.
               </p>
-              <p>I am attaching a copy of our school rules and pickup information so that you and your child can review them together. If
-                you have any questions about the rules and expectations, please feel free to contact me or to
-                discuss them with your childs teacher. It is very important that you and your child are fully
-                informed regarding standards related to appropriate behavior for a safe and productive school
-                year. Please feel free to review the School pickup information and other required information</p>
 
               <p class="mx-auto">
                 <b style="color: purple">East High School</b> pickup will be in
@@ -153,7 +146,7 @@
                 eliminate any unnecessary last minute appointment changes or
                 misses, $30.00 will be charged for each missed or unexcused
                 appointment. If an appointment is missed the $30.00 fee must be
-                paid at the students next lesson. Any changes in scheduled
+                paid at the student’s next lesson. Any changes in scheduled
                 appointments will not be considered unless made at least 48
                 hours in advance to fill the requested appointment change.
               </p>
@@ -177,22 +170,6 @@
                 appointments or talk about any concerns relating to your teens
                 driving experience.
               </p>
-              <p>The wonderful Mad Area driving school staff and I feel privileged to be a part of this school family. We thank
-                you for your support and look forward to meeting you.</p>
-                </div>
-                
-<div class="signature">
-<br/>
-<!-- Space for signature. -->
-<br/>
-<br/>
-<br/>
-<h1> Sincerely,</h1>
-
-<br/>
-<small>James N. Kapinus</small>
-<small>Owner</small>
-
 
               <img
                 src="http://www.madareadriving.com/home_files/MADAREA.GIF"
